--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.1.RELEASE'
+        springBootVersion = '2.0.7.RELEASE'
         kotlinVersion = '1.2.71'
     }
     repositories {
@@ -61,12 +61,12 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-configuration-processor')
     compile('org.springframework.boot:spring-boot-starter-amqp')
-    compile("org.jetbrains.kotlin:kotlin-stdlib-jre8")
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")  //updated from jre8 (depreciated)
     compile("org.jetbrains.kotlin:kotlin-reflect")
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile('org.apache.commons:commons-lang3:3.7')
     compile('commons-codec:commons-codec:1.11')
-    compile('com.google.guava:guava:23.6-jre')
+    compile('com.google.guava:guava:24.1.1-jre')
     compile('org.codehaus.groovy:groovy')
     compile('org.codehaus.groovy:groovy-templates')
 
@@ -79,9 +79,12 @@ dependencies {
     testCompile('com.github.tomakehurst:wiremock-standalone:2.17.0')
     testCompile("io.projectreactor:reactor-test")
     testCompile('org.springframework.amqp:spring-rabbit-test')
-    testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo'){
+        exclude group: 'org.apache.commons', module: 'commons-compress'
+    }
 
     testImplementation('org.junit.jupiter:junit-jupiter-api')
+    testImplementation('org.apache.commons:commons-compress:1.18')
 
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
 }
